--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -99,7 +99,9 @@
             android:id="@+id/priceET"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textSize="30dp"
+            android:textSize="28dp"
+            android:paddingLeft="4dp"
+            android:paddingRight="4dp"
             android:gravity="center"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="20dp"
